fix horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,8 @@ a {
 }
 
 :root {
- --text-color: #000;
- --background-color: #fff;
+    --text-color: #000;
+    --background-color: #fff;
 }
 
 body, html {
@@ -166,6 +166,7 @@ body.info-active::after {
     top: 110px; /* Centered on the expanded info elements */
     left: 50%;
     width: 700px; /* Wider for ellipse shape */
+    max-width: 100vw; /* Prevent overflow on mobile */
     height: 400px; /* Shorter for ellipse shape */
     transform: translate(-50%, -50%); /* Center the glow horizontally and vertically on the anchor */
     background: radial-gradient(ellipse, rgb(255, 255, 255, 1) 0%, transparent 70%);
@@ -181,12 +182,12 @@ body.info-active::after {
 
 
 @media (prefers-color-scheme: dark) {
- :root {
- --text-color: #fff;
- --background-color: #121212;
- --current-time-color: #aaa;
- }
- #container::before {
- background: radial-gradient(ellipse, rgba(255, 255, 255, 0.13) 0%, transparent 65%);
- }
+    :root {
+    --text-color: #fff;
+    --background-color: #121212;
+    --current-time-color: #aaa;
+    }
+    #container::before {
+    background: radial-gradient(ellipse, rgba(255, 255, 255, 0.13) 0%, transparent 65%);
+    }
 }
